Fix the add button alignment

--- a/_patterns/sections/sections.css
+++ b/_patterns/sections/sections.css
@@ -43,6 +43,11 @@
   transform: translateX(-50%);
 }
 
+.c-hori {
+  display: flex;
+  align-items: center;
+}
+
 @media only screen and (min-width: 38em) {
 
   .img, .img-left {
